having problems...2nd commit

--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>😑 MathSite</title>
-    <script src="index.js"></script>
+    <script>
+      const x = document.getElementById("x")
+      function answer() {
+        console.log("hello")
+        document.getElementById("answerr").innerHTML = toString(x)
+      }
+    </script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>hello</h1>
 
     <form>
-      <input type="number" id="xA" />
-      <input type="number" id="xB" />
-      <input type="number" id="yA" />
-      <input type="number" id="yB" />
+      <input type="number" id="x" />
     </form>
 
-    <h2 id="answer">hello</h2>
+    <h2 id="answerr">hello</h2>
+    <button onClick="answer()">answer</button>
   </body>
 </html>
