bug fixed B) thanks to help from ppl of Ben Awad's discord server. time to expand the site

--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>😑 MathSite</title>
-    <script>
-      const x = document.getElementById("x")
-      function answer() {
-        console.log("hello")
-        document.getElementById("answerr").innerHTML = toString(x)
-      }
-    </script>
+    <title>random</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -21,7 +14,9 @@
       <input type="number" id="x" />
     </form>
 
-    <h2 id="answerr">hello</h2>
+    <h2 id="disp">hello</h2>
     <button onClick="answer()">answer</button>
+
+    <script src="index.js"></script>
   </body>
 </html>
