distance formula donegit add . UI still needs poilishing tho

--- a/index.html
+++ b/index.html
@@ -4,18 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>random</title>
+    <title>myMaths</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>hello</h1>
-
+    <h1>myMaths</h1>
+    <h2>distance formula</h2>
     <form>
-      <input type="number" id="x" />
+      <input type="number" id="aX" />
+      <input type="number" id="aY" />
+      <input type="number" id="bX" />
+      <input type="number" id="bY" />
     </form>
 
-    <h2 id="disp">hello</h2>
+    <br />
+
+    <span> distance =&ThinSpace; </span>
+    <span id="answer-field"> </span>
+    <br />
+    <br />
     <button onClick="answer()">answer</button>
+    <br />
 
     <script src="index.js"></script>
   </body>
