--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>myMaths</title>
     <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>myMaths</h1>
     <h2>distance formula</h2>
     <form>
-      <input type="number" id="aX" />
-      <input type="number" id="aY" />
-      <input type="number" id="bX" />
-      <input type="number" id="bY" />
+
+        <span class="a-cor">
+            <h3>coordinate a</h3>
+            <input type="number" id="aX" placeholder="x-value" />
+            <input type="number" id="aY" placeholder="y-value" />
+        </span>
+        <br>
+        <span class="b-cor">
+            <h3>coordinate b</h3>
+            <input type="number" id="bX" placeholder="x-value" />
+            <input type="number" id="bY" placeholder="y-value" />
+        </span>
     </form>
 
     <br />
@@ -27,5 +37,6 @@
     <br />
 
     <script src="index.js"></script>
-  </body>
+</body>
+
 </html>
