fixing problems, making progress

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <br />
 
         <span> distance =&ThinSpace; </span>
-        <span id="answer-field-d"> </span>
+        <p id="answer-field-d"></p> 
         <br />
         <br />
         <button onClick="distance()">answer</button>
