fixed some major stuff ... all the three main algorithms done, ui will be tackled next. good progress (:

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <br />
 
         <span> distance =&ThinSpace; </span>
-        <p id="answer-field-d"></p> 
+        <p id="answer-field-d"></p>
         <br />
         <br />
         <button onClick="distance()">answer</button>
@@ -60,11 +60,41 @@
         <br />
 
         <span> midpoint =&ThinSpace; </span>
+        <br>
         <span id="answer-field-m"><span>
                 <br />
                 <br />
                 <button onClick="midpoint()">answer</button>
                 <br />
+    </section>
+
+    <section class="gradient-formula">
+        <h2>gradient formula</h2>
+        <form>
+
+            <span class="a-cor">
+                <h3>coordinate a</h3>
+                <input type="number" id="gaX" placeholder="x-value" />
+                <input type="number" id="gaY" placeholder="y-value" />
+            </span>
+            <br>
+            <span class="b-cor">
+                <h3>coordinate b</h3>
+                <input type="number" id="gbX" placeholder="x-value" />
+                <input type="number" id="gbY" placeholder="y-value" />
+            </span>
+        </form>
+
+        <br />
+
+        <span> gradient =&ThinSpace; </span>
+        <br>
+        <span id="answer-field-g"><span>
+                <br />
+                <br />
+                <button onClick="gradient()">answer</button>
+                <br />
+
     </section>
 
     <script src="index.js"></script>
