added logos, working on css

--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>myMaths</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="assets/logos/PNG/Light logo.png" type="image/x-icon">
 </head>
 
 <body>
+
+<nav class="navbar">
+    <div class="nav-left">
+    <a href="index.html">
+    <img src="assets/logos/PNG/Dark logo.png" alt="myMathsLogo" class="nav-logo">
+    </a>
+    </div>
+
+    <div class="nav-right">
+        <a href="index.html"> 🤫 get answers </a>
+        <a href="report.html"> 👻 report problems </a>
+    </div>
+</nav>
+
     <h1>myMaths</h1>
 
     <section class="distance-formula">
