hamburger in progress

--- a/index.html
+++ b/index.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>myMaths</title>
     <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="shortcut icon"
-      href="assets/logos/PNG/Light logo.png"
-      type="image/x-icon"
-    />
-  </head>
+    <link rel="shortcut icon" href="assets/logos/PNG/Light logo.png" type="image/x-icon" />
+</head>
 
-  <body>
-    <nav class="navbar">
-      <a onclick="showMenu()">
+<body>
+    <div class="hamburger">
         <img src="assets/logos/SVG/Dark logo.svg" />
-        <h3>myMaths</h3>
-      </a>
+        <a href="calc.html">get answers</a>
+        <a href="feedback.html">give feedback</a>
+    </div>
+    <nav class="navbar">
+        <a onclick="showMenu()">
+            <img src="assets/logos/SVG/Dark logo.svg" />
+            <h3>myMaths</h3>
+        </a>
     </nav>
 
     <section class="main">
-      <div class="main-h">
-        <p class="mpOne">online maths calculator for south african students</p>
-        <p class="mpS">go from . . .</p>
-        <img
-          class="mGif"
-          src="assets/images/confused-math.gif"
-          alt="confused?"
-        />
+        <div class="main-h">
+            <p class="mpOne">online maths calculator for south african students</p>
+            <p class="mpS">go from . . .</p>
+            <img class="mGif" src="assets/images/confused-math.gif" alt="confused?" />
 
-        <p class="mpS">to . . .</p>
-        <img class="mImg" src="assets/images/moneymath.svg" alt="" />
-        <a class="mButton" href="calc.html">calculate now . . .</a>
-      </div>
+            <p class="mpS">to . . .</p>
+            <img class="mImg" src="assets/images/moneymath.svg" alt="" />
+            <a class="mButton" href="calc.html">calculate now . . .</a>
+        </div>
     </section>
 
     <footer class="footer">
-      <h2>made with ❤️ by vortex - 2021</h2>
+        <h2>made with ❤️ by vortex - 2021</h2>
     </footer>
-  </body>
+</body>
+
 </html>
