--- a/feedback.html
+++ b/feedback.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>myMaths</title>
-    <link rel="stylesheet" id="style" href="styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       rel="shortcut icon"
       href="assets/logos/PNG/Light logo.png"
@@ -30,22 +30,6 @@
         <h3>myMaths</h3>
       </button>
     </nav>
-
-    <section class="main">
-      <div class="main-h">
-        <p class="mpOne">online maths calculator for south african students</p>
-        <p class="mpS">go from . . .</p>
-        <img
-          class="mGif"
-          src="assets/images/confused-math.gif"
-          alt="confused?"
-        />
-
-        <p class="mpS">to . . .</p>
-        <img class="mImg" src="assets/images/moneymath.svg" alt="" />
-        <a class="mButton" href="calc.html">calculate now . . .</a>
-      </div>
-    </section>
 
     <footer class="footer">
       <h2>made with &#x1F49A; by vortex - 2021</h2>
