--- a/index.html
+++ b/index.html
@@ -1,56 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>myMaths</title>
     <link rel="stylesheet" id="style" href="styles.css" />
-    <link
-      rel="shortcut icon"
-      href="assets/logos/PNG/Light logo.png"
-      type="image/x-icon"
-    />
-  </head>
+    <link rel="shortcut icon" href="assets/logos/PNG/Light logo.png" type="image/x-icon" />
+</head>
 
-  <body>
+<body>
     <div id="hamburger" class="hamburger">
-      <button onclick="hideMenu()" class="hamburger-button">
-        <img src="assets/logos/SVG/Dark logo.svg" />
-      </button>
-      <div class="hamb-a">
-        <a href="index.html" class="button"> &#x1F3E0; home</a>
-        <a class="button" href="calc.html"> &#x1F440; get answers</a>
-        <a class="button" href="feedback.html"> &#x1F914; give feedback</a>
-      </div>
+        <button onclick="hideMenu()" class="hamburger-button">
+            <img src="assets/logos/SVG/Dark logo.svg" />
+        </button>
+        <div class="hamb-a">
+            <a href="index.html" class="button"> &#x1F3E0; home</a>
+            <a class="button" href="calc.html"> &#x1F440; get answers</a>
+            <a class="button" href="feedback.html"> &#x1F914; give feedback</a>
+        </div>
     </div>
     <nav class="navbar">
-      <button onclick="showMenu()">
-        <img src="assets/logos/SVG/Dark logo.svg" />
-        <h3>myMaths</h3>
-      </button>
+        <button onclick="showMenu()">
+            <img src="assets/logos/SVG/Dark logo.svg" />
+            <h3>myMaths</h3>
+        </button>
     </nav>
 
     <section class="main">
-      <div class="main-h">
-        <p class="mpOne">online maths calculator for south african students</p>
-        <p class="mpS">go from . . .</p>
-        <img
-          class="mGif"
-          src="assets/images/confused-math.gif"
-          alt="confused?"
-        />
+        <div class="main-h">
+            <p class="mpOne">online maths calculator for south african students</p>
+            <p class="mpS">go from . . .</p>
+            <img class="mGif" src="assets/images/confused-math.gif" alt="confused?" />
 
-        <p class="mpS">to . . .</p>
-        <img class="mImg" src="assets/images/moneymath.svg" alt="" />
-        <a class="mButton" href="calc.html">calculate now . . .</a>
-      </div>
+            <p class="mpS">to . . .</p>
+            <img class="mImg" src="assets/images/moneymath.svg" alt="" />
+            <a class="mButton" href="calc.html">calculate now . . .</a>
+        </div>
     </section>
 
     <footer class="footer">
-      <h2>made with &#x1F49A; by vortex - 2021</h2>
+        <h2>made with &#x1F49A; by V0RT3X - 2021</h2>
     </footer>
 
     <script src="index.js"></script>
-  </body>
+</body>
+
 </html>
