making changes to the feedback page ;)

--- a/feedback.html
+++ b/feedback.html
@@ -11,7 +11,7 @@
       href="assets/logos/PNG/Light logo.png"
       type="image/x-icon"
     />
-  </head>
+  </head>  
 
   <body>
     <div id="hamburger" class="hamburger">
@@ -30,6 +30,42 @@
         <h3>myMaths</h3>
       </button>
     </nav>
+
+    <section class="feedback">
+
+      <h2>love the site? &#x1F60D; </h2>
+      <h2>hate the site? &#x1F622; 	</h2>
+
+      <h1>tell us below!</h1>
+
+      <form action="">
+      <div class="feeedback__form__part">
+
+        <label for="name">your name</label>
+        <br>
+       <input type="text" name="name" id="name" placeholder="name">
+
+      </div>
+
+
+      <div class="feeedback__form__part">
+
+        <label for="message">your message</label>
+        <br>
+       <input type="text" name="message" id="message" placeholder="message">
+       
+      </div>
+      <div class="feeedback__form__part">
+
+        <label for="name">your email</label>
+        <br>
+       <input type="email" name="email" id="email" placeholder="email">
+       
+      </div>
+
+      </form>
+
+    </section>
 
     <footer class="footer">
       <h2>made with &#x1F49A; by vortex - 2021</h2>
