tryna fix the hamburger uggh such a drag

--- a/feedback.html
+++ b/feedback.html
@@ -19,7 +19,7 @@
             <a href="index.html" class="button"> &#x1F3E0; home</a>
             <a class="button" href="calc.html"> &#x1F440; get answers</a>
             <a class="button" href="feedback.html"> &#x1F914; give feedback</a>
-        </div>
+        </div> 
     </div>
     <nav class="navbar">
         <button onclick="showMenu()">
@@ -47,17 +47,14 @@
 
       <div class="feeedback__form__part">
 
-        <label for="message">your message</label>
+      <label for="message">your message</label>
         <br>
        <input type="text" name="message" id="message" placeholder="message">
        
       </div>
       <div class="feeedback__form__part">
 
-        <label for="name">your email</label>
-        <br>
-       <input type="email" name="email" id="email" placeholder="email">
-       
+       <input type="submit" name="submit" id="submit" value="submit">
       </div>
 
       </form>
