--- a/index.html
+++ b/index.html
@@ -11,22 +11,41 @@
 </head>
 
 <body>
+
     <div id="hamburger" class="hamburger">
+
         <button onclick="hideMenu()" class="hamburger-button">
-            <img src="assets/logos/SVG/Dark logo.svg" />
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z" />
+            </svg>
         </button>
+
         <div class="hamb-a">
             <a href="index.html" class="button"> &#x1F3E0; home</a>
-            <a class="button" href="calc.html"> &#x1F440; get answers</a>
+            <a class="button" href="calc.html"> &#x1F440; resources</a>
             <a class="button" href="feedback.html"> &#x1F914; give feedback</a>
         </div>
     </div>
+
+
     <nav class="navbar">
-        <button onclick="showMenu()">
-            &#xf0c9;
-        </button>
-        <img src="assets/logos/SVG/Dark logo.svg" />
-        <h3>myMaths</h3>
+        <div class="nav__child1">
+            <button onclick="showMenu()">
+                <svg viewBox="0 0 100 80" width="40" height="40">
+                    <rect width="100" height="20"></rect>
+                    <rect y="30" width="100" height="20"></rect>
+                    <rect y="60" width="100" height="20"></rect>
+                </svg>
+            </button>
+        </div>
+        <a href="index.html" class="nav__child2">
+            <div class="nav__child3">
+                <img src="assets/logos/SVG/Dark logo.svg" alt="logo">
+            </div>
+            <div class="nav__child4">
+                <h3>myMaths</h3>
+            </div>
+        </a>
     </nav>
 
     <section class="main">
@@ -34,7 +53,6 @@
             <p class="mpOne">online maths calculator for south african students</p>
             <p class="mpS">go from . . .</p>
             <img class="mGif" src="assets/images/confused-math.gif" alt="confused?" />
-
             <p class="mpS">to . . .</p>
             <img class="mImg" src="assets/images/moneymath.svg" alt="" />
             <a class="mButton" href="calc.html">calculate now . . .</a>
@@ -42,7 +60,8 @@
     </section>
 
     <footer class="footer">
-        <h2>made with &#x1F49A; by V0RT3X - 2021</h2>
+        <h1>made with &#x1F49A; by V0RT3X</h1>
+        <h2> &copy; 2021</h2>
     </footer>
 
     <script src="index.js"></script>
