having a hard time with the feedback page - it aint working rightttttt

--- a/feedback.html
+++ b/feedback.html
@@ -59,30 +59,30 @@
 
         <form id="feedback-form" action="results.html" method="GET">
 
-            <div class="feeedback__form__part">
-                <label for="name">your name</label>
+            <div class="feedback__form__part">
+                <label for="name"> your name</label>
                 <br>
                 <input type="text" name="name" id="name" placeholder="name">
             </div>
 
-            <div class="feeedback__form__part">
+            <div class="feedback__form__part">
                 <label for="rating">rate our site from &#x1F92E; to &#x1F525; </label>
                 <br>
                 <input type="range" name="rating" id="rating" min="0" max="100" step="10">
             </div>
 
-            <div class="alt__feeedback__form__part">
+            <div class="alt__feedback__form__part">
                 <h2>where can we improve?</h2>
                 <input type="checkbox" name="improveOne" id="improveOne">
                 <label for="improveOne">user interface</label><br>
                 <input type="checkbox" name="improveTwo" id="improveTwo">
                 <label for="improveTwo">more resources!!!</label><br>
                 <input type="checkbox" name="improveThree" id="improveThree">
-                <label for="improveThree">more convenient experience</label><br>              
+                <label for="improveThree">more convenient experience</label><br>
             </div>
 
 
-            <div class="alt__feeedback__form__part">
+            <div class="alt__feedback__form__part">
                 <h2>would you recommend myMaths to anyone?</h2>
                 <br>
                 <input type="radio" name="recOne" id="recOne">
@@ -91,7 +91,7 @@
                 <label for="recTwo">nah</label><br>
             </div>
 
-            <div class="feeedback__form__part">
+            <div class="feedback__form__part">
                 <label for="message">your message</label>
                 <br>
                 <input type="text" name="message" id="message" placeholder="message">
